fix[styles]: Adjust slider flexbox to prevent numbers from overflowing when numbers are double digits

--- a/src/blocks/assets/LayeredImageBlock/LayeredImageStyles.css
+++ b/src/blocks/assets/LayeredImageBlock/LayeredImageStyles.css
@@ -7,11 +7,11 @@
     appearance: none;          
     padding: 0px;
     margin: 0px;
-    width: 100%;
+    width: 90%;
     height: 10px;
     border-radius: 20px;
     margin-right: 12px;
-    flex-grow: inherit;
+    flex-grow: 0;
     Border: 2px solid #0051E8;
   }
 
